// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HttpValidator validateInput() all validations are turned on properly validate date-time format ("") 1`] = `
Object {
  "_tag": "Right",
  "right": Object {
    "method": "get",
    "url": Object {
      "path": "/todos",
      "query": Object {
        "updated_since": "",
      },
    },
  },
}
`;

exports[`HttpValidator validateInput() all validations are turned on properly validate date-time format ("2021-02-18T12:02:16.49") 1`] = `
Object {
  "_tag": "Left",
  "left": Array [
    Object {
      "code": "format",
      "message": "Request query parameter updated_since must match format \\"date-time\\"",
      "path": Array [
        "query",
        "updated_since",
      ],
      "severity": 0,
    },
  ],
}
`;

exports[`HttpValidator validateInput() all validations are turned on properly validate date-time format ("2021-02-18T12:02:16.49Z") 1`] = `
Object {
  "_tag": "Right",
  "right": Object {
    "method": "get",
    "url": Object {
      "path": "/todos",
      "query": Object {
        "updated_since": "2021-02-18T12:02:16.49Z",
      },
    },
  },
}
`;

exports[`HttpValidator validateInput() all validations are turned on properly validate date-time format ("yesterday") 1`] = `
Object {
  "_tag": "Left",
  "left": Array [
    Object {
      "code": "format",
      "message": "Request query parameter updated_since must match format \\"date-time\\"",
      "path": Array [
        "query",
        "updated_since",
      ],
      "severity": 0,
    },
  ],
}
`;

exports[`HttpValidator validateInput() all validations are turned on returns validation errors for whole request structure 1`] = `
Object {
  "_tag": "Left",
  "left": Array [
    Object {
      "code": "type",
      "message": "Request body property completed must be boolean",
      "path": Array [
        "body",
        "completed",
      ],
      "severity": 0,
    },
    Object {
      "code": "format",
      "message": "Request header parameter x-todos-publish must match format \\"date-time\\"",
      "path": Array [
        "header",
        "x-todos-publish",
      ],
      "severity": 0,
    },
    Object {
      "code": "pattern",
      "message": "Request query parameter overwrite must match pattern \\"^(yes|no)$\\"",
      "path": Array [
        "query",
        "overwrite",
      ],
      "severity": 0,
    },
  ],
}
`;

exports[`HttpValidator validateOutput() all validations are turned on returns validation errors for whole request structure 1`] = `
Object {
  "_tag": "Left",
  "left": Array [
    Object {
      "message": "The received media type \\"application/something\\" does not match the ones specified in the current response: application/json, application/xml",
      "severity": 0,
    },
    Object {
      "code": "type",
      "message": "Request body property completed must be boolean",
      "path": Array [
        "body",
        "completed",
      ],
      "severity": 0,
    },
    Object {
      "code": "format",
      "message": "Request header parameter x-todos-publish must match format \\"date-time\\"",
      "path": Array [
        "header",
        "x-todos-publish",
      ],
      "severity": 0,
    },
  ],
}
`;
